--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.2",
     "http-server": "^0.11.1",
     "jquery": "^3.3.1",
+    "pdfjs-dist": "^2.0.943",
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
